--- a/src/main/webapp/partials/login.html
+++ b/src/main/webapp/partials/login.html
@@ -1,4 +1,5 @@
-<form>
+<header>Login</header>
+<form ng-submit="LoginCtrl.login()">
     <div id="email-container">
         <label for="email">Email: </label>
         <input id="email" type="email" ng-model="LoginCtrl.email" required>
@@ -7,5 +8,5 @@
         <label for="password">Password: </label>
         <input id="password" type="password" ng-model="LoginCtrl.password" required>
     </div>
-    <button type="submit" ng-click="LoginCtrl.login()">Log In</button>
+    <input type="submit" id="submit" value="Login"/>
 </form>
