Remove cache logic from Playlists/:playlistId API

--- a/src/main/webapp/partials/playlist.html
+++ b/src/main/webapp/partials/playlist.html
@@ -4,6 +4,7 @@
     </header>
     <main id="main-screen">
         <!-- <md-button id="create-playlist" class="md-primary md-raised" type="submit" ng-click="showPrompt($event)"><strong>CREATE</strong></md-button> -->
+        <!-- <button id="create-playlist" class="md-primary md-raised" type="submit" ng-click="showPrompt($event)"><strong>CREATE</strong></Sbutton> -->
         <article id="{{ playlist.playlistId }}" class="general-article" ng-repeat="playlist in pCtrl.playlists">
             <div id="article-content">
                 <h4 class="general-title">{{ playlist.playlistName }}</h4>
